Fixing alignments

--- a/ScriptRunner.UI/wwwroot/css/site.css
+++ b/ScriptRunner.UI/wwwroot/css/site.css
@@ -343,5 +343,5 @@ dd {
 }
 
 #Params {
-    margin-top: -4px;
+    margin-top: -7px;
 }
